tests/ui/const_fn.stderr
error: const extern function is not supported
 --> $DIR/tests/ui/const_fn.rs:4:9
  |
4 |         const fn f();
  |         ^^^^^^^^^^^^^
